Features in the mass distribution, such as possible mass pairings, are a topic of active investigation{}

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -171,7 +171,7 @@ The masses of the black-hole binaries observed to date are shown in figure \ref{
 
 \textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star \citep{GW190814}) to $\simeq 80 M_\odot$ for GW190521 \citep{GW190521} (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}) and GW200220\_061928 \citep{GWTC3}.  There is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  Once selection effects are accounted for, the mass distribution for the more massive black hole appears to be consistent with a power-law $p(M) \propto M^{-3.4}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}, with an additional peak at around $34 M_\odot$.  The vast majority of merging binary black holes, $\approx 99\%$, have both companion masses below $45 M_\odot$ \citep{GWTC3:pop}.   
 
-Most observed merging binary black holes are consistent with having equal-mass components, though the poorly measured mass ratios span a very broad range in some cases.  Several observed events, such as GW190412 with a mass ratio of $3:1$ \citep{GW190412}, and GW190814 with a mass ratio of $9:1$ \citep{GW190814}, are definitely inconsistent with equal masses.  Features in the mass distribution, such as possible mass pairings, are a topic of active investigation \citep{}.
+Most observed merging binary black holes are consistent with having equal-mass components, though the poorly measured mass ratios span a very broad range in some cases.  Several observed events, such as GW190412 with a mass ratio of $3:1$ \citep{GW190412}, and GW190814 with a mass ratio of $9:1$ \citep{GW190814}, are definitely inconsistent with equal masses.
 
 \textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021,GWTC3:pop}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521} and GW200129 \citep{Hannam:2021}, though other explanations for their signal morphology (e.g., eccentricity, see below) have been proposed.
 
