--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -274,7 +274,7 @@ In this scenario the two stars are born in a relatively wide binary, allowing th
 
 An example of the evolution of this system is sketched out in a van den Heuvel -- style diagram in \autoref{fig:isol_binary}, and the steps below follow the panels in that figure:
 \begin{enumerate}  
-\item[a.] Two massive stars of perhaps $100$ and $75$ $M_{\odot}$ are born in a binary at a separation of $\sim 10$ AU in a low-metallicity environment ($\sim 5\%$ of solar metallicity).  
+\item[a.] Two massive stars of perhaps $100$ and $75$ $M_{\odot}$ are born in a binary at a separation of $\sim 10$ AU in a low-metallicity environment ($\sim 5\%$ of solar metallicity, or metal fraction --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium).  
 \item[b.] The more massive primary reaches the end of its main sequence evolution first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The associated release of gravitational binding energy and the eventual onset of hydrogen shell burning cause the hydrogen-rich envelope to expand.  For a sufficiently close binary, the primary expands past the equipotential surface known as the Roche Lobe and begins to transfer mass onto the secondary.  This mass transfer proceeds on the thermal timescale of the primary donor and could be significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary, in addition to wind-driven mass loss, can widen the system to perhaps $\sim 20$ AU.  
 \item[c.] The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  
 \item[d.] Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; this collapse may be complete, or there may be some ejected mass and an associated natal kick.  
@@ -442,7 +442,7 @@ The evolutionary history of merging black holes also depends on their formation 
 
 Black-hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the amount of ejecta during the supernova. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core --- the convective region in the centre of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron --- determines the ultimate black-hole mass.  If left unperturbed, a third to a half of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black-hole remnant.
 
-The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001,Sander:2020}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017,Vink:2017}, simulations suggest that at the metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black-hole masses are only around 15--20 $M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the possible dependence of compact remnant mass on metallicity. 
+The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, metallicity is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001,Sander:2020}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017,Vink:2017}, simulations suggest that at the metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black-hole masses are only around 15--20 $M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the possible dependence of compact remnant mass on metallicity. 
  
 \begin{figure}
 	\centering
