--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -9,9 +9,9 @@
 
 \documentclass[review]{elsarticle}
 
-\usepackage{lineno,hyperref}
-\modulolinenumbers[5]
-
+%\usepackage{lineno,hyperref}
+%\modulolinenumbers[5]
+\usepackage{hyperref}
 
 \journal{Physics Reports}
 %\usepackage[authoryear,longnamesfirst]{natbib}
@@ -128,11 +128,11 @@ The LIGO and Virgo detectors have directly observed gravitational waves from mer
 
 \end{frontmatter}
 
-\linenumbers
+%\linenumbers
 
 \section{Introduction}
 
-Our goal is to present an informal, colloquium-style article on the subject of merging stellar-mass black-hole binaries as gravitational-wave sources. Several reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}.  More recent contributions included reviews by \citet{Mapelli:2018,Mapelli:2021} and a compilation of compact binary merger rate measurements and predictions by \citet{MandelBroekgaarden:2021}. However, it is challenging to formally review a field that is both rapidly evolving and still very much in its infancy.  With around 70 detections of gravitational waves from merging black holes \citep{BBH:O1,BBH:O2,Venumadhav:2020,GWTC2,Abbott:2021-GWTC-2-1,GWTC3,Nitz:2021-4OGC,Olsen:2022}, along with two from merging neutron stars \citep{GW170817, GW190425} and two from mergers of neutron stars with black holes \citep{GW200105}, we are only beginning to explore the population of merging compact-object binaries.  The understanding of the formation channels for these sources is evolving with each new data release.
+Our goal is to present an informal, colloquium-style article on the subject of merging stellar-mass black-hole binaries as gravitational-wave sources. Several reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}.  More recent contributions included reviews by \citet{Mapelli:2018,Mapelli:2021} and a compilation of compact binary merger rate measurements and predictions by \citet{MandelBroekgaarden:2021}. However, it is challenging to formally review a field that is both rapidly evolving and still very much in its infancy.  With around 70 detections of gravitational waves from merging black holes \citep{BBH:O1,BBH:O2,Venumadhav:2020,GWTC2,Abbott:2021-GWTC-2-1,GWTC3,Nitz:2021-4OGC,Olsen:2022}, along with two from merging neutron stars \citep{GW170817, GW190425} and two from mergers of neutron stars with black holes \citep{GW200105}, we are only beginning to explore the population of merging compact-object binaries.  The understanding of the formation channels for these sources is evolving with each new data release.
 
 The full range of astrophysical questions that gravitational-wave observations will answer is itself a topic of active study and debate. For example: What can gravitational-wave observations of merging binaries tell us about the stellar and binary evolution that preceded the mergers?  Can the observations constrain the amount of mass loss and expansion experienced by massive stars? Or the stability and consequences of mass transfer, including the infamous common-envelope phase of evolution? Or the amount of mass fallback during supernova explosions, or the kicks that supernovae impart to compact objects? Does the redshift distribution of merging compact objects contain an imprint of the star formation history of the Universe?  Can we use these mergers to probe dynamics in dense stellar environments such as globular clusters? The answers to these important and exciting questions may also in turn influence our understanding of topics as diverse as reionisation and heavy-element nucleosynthesis.
 
@@ -284,7 +284,7 @@ An example of the evolution of this system is sketched out in a van den Heuvel -
 \item[h.] Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black-hole binary is formed.  While this entire process takes only a few million years from the formation of a stellar binary to the formation of a binary black hole, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 \end{enumerate}
 
-Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables (massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss \citep{Vink:2011})  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer \citep{KippenhahnMeyerHofmeister:1977} and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016,Klencki:2020convective,Fragos:2019,LawSmith:2020,Lau:2021}; the amount of mass that may be retained by a star after its envelope is stripped off \citep[e.g.,][]{Laplace:2020}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Fryer:2012,Repetto:2012,Mandel:2015kicks,Mueller:2020}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Belczynski:2002,Dewi:2006}; and the amount of mass that can be accreted onto a black hole \citep{Eldridge:2017,Bavera:2020,vanSon:2020}.  Moreover, some isolated binaries could form merging binary black holes entirely through dynamically stable mass transfer, with sufficient binary hardening achieved by non-conservative mass transfer onto a lower-mass compact donor rather than a common-envelope event \citep{vandenHeuvel:2017,Pavlovskii:2017,Neijssel:2018,vanSon:2021}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
+Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables (massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss \citep{Vink:2011})  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer \citep{KippenhahnMeyerHofmeister:1977} and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016,Klencki:2020convective,Fragos:2019,LawSmith:2020,Lau:2021}; the amount of mass that may be retained by a star after its envelope is stripped off \citep[e.g.,][]{Laplace:2020}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Fryer:2012,Repetto:2012,Mandel:2015kicks,Mueller:2020}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Belczynski:2002,Dewi:2006}; and the amount of mass that can be accreted onto a black hole \citep{Eldridge:2017,Bavera:2020,vanSon:2020}.  Moreover, some isolated binaries could form merging binary black holes entirely through dynamically stable mass transfer, with sufficient binary hardening achieved by non-conservative mass transfer onto a lower-mass compact donor rather than a common-envelope event \citep{vandenHeuvel:2017,Pavlovskii:2017,Neijssel:2019,vanSon:2021}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
 \subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}\label{form:CHE}
 
